Fixed tap bug, prevented overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,7 +2,12 @@ body {
   font-family: 'Georgia', sans-serif;
   font-size: 16px;
   cursor: grab;
+}
+
+.App {
   overflow: hidden;
+  height: 100vh;
+  width: 100vw;
 }
 
 .centered {
@@ -15,21 +20,10 @@ body {
   position: absolute;
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
   background-color: #35434f;
   z-index: -100;
 }
 
-.swipeBox {
-  background-color: aqua;
-  z-index: 200;
-  width: "100%";
-  position: absolute;
-  height: 100%;
-  top: 0;
-  left: 0;
-}
 
 .header {
   text-align: center;
